<resources>
    <string name="app_name">Lepaking</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_barcode" translatable="false">Barcode</string>
    <string name="error_barcode_invalid" translatable="false">Please enter valid barcode</string>
    <string name="all_confirm" translatable="false">Confirm</string>
    <string name="label_Scan" translatable="false">Scan</string>
    <string name="label_New" translatable="false">New</string>
    <string name="label_Complete" translatable="false">Complete</string>
    <string name="label_Setting" translatable="false">Setting</string>
    <string name="warning_permission_required" translatable="false">Application require STORAGE, CAMERA and other permissions to function properly</string>
    <string name="upload_google_drive" translatable="false">Upload to Google Drive</string>
    <string name="barcode" translatable="false">Barcode</string>
    <string name="enter_barcode" translatable="false">Enter Barcode</string>
    <string name="name" translatable="false">Name</string>
    <string name="telephone" translatable="false">Telephone</string>
    <string name="order_type" translatable="false">Order Type</string>
    <string name="pickup_time" translatable="false">Pickup Time</string>
    <string name="total_price" translatable="false">Total Price</string>
    <string name="enter_customer_name" translatable="false">Customer Name</string>
    <string name="prepare_now" translatable="false">Prepare Now</string>
    <string name="label_courier" translatable="false">Courier</string>

    <!-->About Page-->
    <string name="title_company">Company</string>
    <string name="title_version">Version</string>
    <string name="title_developer">Developers</string>
    <string name="developer_name" translatable="false">Hakim</string>
    <string name="title_support_email">Support Email</string>
    <string name="support_email" translatable="false">softsupp@resmal.com</string>
    <string name="title_support_contact">Support Contact</string>
    <string name="support_contact" translatable="false">+603 5036 9711</string>
    <string name="title_email_chooser">Choose Email Client:</string>
    <string name="pref_name_user">user</string>
    <string name="ui_user_name">User Name</string>
    <string name="app_copyright">Copyright \u00A9 Lepaking Sdn. Bhd. 2021</string>
    <string name="company_name" translatable="false">Lepaking Sdn. Bhd.</string>

</resources>