<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:text="@string/title_version"
            android:id="@+id/about_version"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="?android:attr/colorPrimary"
            android:textStyle="bold"
            style="@style/TextSubTitle"/>

        <TextView
            android:id="@+id/about_version_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/about_version"
            android:paddingBottom="20dp"
            style="@style/TextValue"/>

        <TextView
            android:id="@+id/about_company"
            style="@style/TextSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/about_version_value"
            android:text="@string/title_company"
            android:textColor="?android:attr/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:text="@string/company_name"
            android:id="@+id/about_company_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/about_company"
            android:paddingBottom="20dp"
            style="@style/TextValue"
            />

        <TextView
            android:text="@string/title_developer"
            android:id="@+id/about_developer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/about_company_value"
            android:textColor="?android:attr/colorPrimary"
            android:textStyle="bold"
            style="@style/TextSubTitle"/>

        <TextView
            android:text="@string/developer_name"
            android:id="@+id/about_developer_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/about_developer"
            android:paddingBottom="20dp"
            style="@style/TextValue"/>

        <TextView
            android:text="@string/title_support_email"
            android:id="@+id/about_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/about_developer_value"
            android:textColor="?android:attr/colorPrimary"
            android:textStyle="bold"
            style="@style/TextSubTitle"/>

        <TextView
            android:text="@string/support_email"
            android:id="@+id/about_email_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/about_email"
            android:textColor="@color/indigoAccent700"
            android:paddingBottom="20dp"
            style="@style/TextValue"/>

        <TextView
            android:text="@string/title_support_contact"
            android:id="@+id/about_contact"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/about_email_value"
            android:textColor="?android:attr/colorPrimary"
            android:textStyle="bold"
            style="@style/TextSubTitle"/>

        <TextView
            android:text="@string/support_contact"
            android:id="@+id/about_contact_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/about_contact"
            android:textColor="@color/indigoAccent700"
            android:paddingBottom="20dp"
            style="@style/TextValue"/>

        <TextView
            android:text="@string/app_copyright"
            android:alpha="0.54"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/about_contact_value"
            android:textAlignment="center"
            style="@style/TextFooter"/>

    </RelativeLayout>
</ScrollView>