<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.lepaking.viewmodel.OrderDetailViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="3">


                <TextView
                    style="@style/TextTitleEditText"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <EditText
                    style="@style/EditText"
                    android:inputType="none"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textIsSelectable="true"
                    android:focusable="false"
                    android:text="@={viewModel.valueCustomerName}"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="3">


                <TextView
                    style="@style/TextTitleEditText"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone"/>

                <EditText
                    style="@style/EditText"
                    android:inputType="none"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textIsSelectable="true"
                    android:focusable="false"
                    android:text="@={viewModel.valueTelephone}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="3">


                <TextView
                    style="@style/TextTitleEditText"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/order_type"/>

                <EditText
                    style="@style/EditText"
                    android:inputType="none"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textIsSelectable="true"
                    android:focusable="false"
                    android:text="@={viewModel.valueOrderType}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="3">


                <TextView
                    style="@style/TextTitleEditText"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup_time"/>

                <EditText
                    style="@style/EditText"
                    android:inputType="none"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textIsSelectable="true"
                    android:focusable="false"
                    android:text="@={viewModel.valuePickupTime}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="3">


                <TextView
                    style="@style/TextTitleEditText"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"/>

                <EditText
                    style="@style/EditText"
                    android:inputType="none"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textIsSelectable="true"
                    android:focusable="false"
                    android:text="@={viewModel.valueTotalPrice}"/>
            </LinearLayout>



<!--            <TextView-->
<!--                style="@style/TextTitleEditText"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/name"/>-->

<!--            <EditText-->
<!--                style="@style/EditText"-->
<!--                android:inputType="none"-->
<!--                android:textIsSelectable="true"-->
<!--                android:focusable="false"-->
<!--                android:text="@={viewModel.valueCustomerName}"/>-->


<!--            <TextView-->
<!--                style="@style/TextTitleEditText"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/telephone"/>-->

<!--            <EditText-->
<!--                style="@style/EditText"-->
<!--                android:inputType="none"-->
<!--                android:textIsSelectable="true"-->
<!--                android:focusable="false"-->
<!--                android:text="@={viewModel.valueTelephone}"/>-->

<!--            <TextView-->
<!--                style="@style/TextTitleEditText"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/order_type"/>-->

<!--            <EditText-->
<!--                style="@style/EditText"-->
<!--                android:inputType="none"-->
<!--                android:textIsSelectable="true"-->
<!--                android:focusable="false"-->
<!--                android:text="@={viewModel.valueOrderType}"/>-->

<!--            <TextView-->
<!--                style="@style/TextTitleEditText"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/pickup_time"/>-->

<!--            <EditText-->
<!--                style="@style/EditText"-->
<!--                android:inputType="none"-->
<!--                android:textIsSelectable="true"-->
<!--                android:focusable="false"-->
<!--                android:text="@={viewModel.valuePickupTime}"/>-->

<!--            <TextView-->
<!--                style="@style/TextTitleEditText"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/total_price"/>-->

<!--            <EditText-->
<!--                style="@style/EditText"-->
<!--                android:inputType="none"-->
<!--                android:textIsSelectable="true"-->
<!--                android:focusable="false"-->
<!--                android:text="@={viewModel.valueTotalPrice}"/>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_item_order_detail"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                tools:listitem="@layout/item_order"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_cancel"
            android:text="Prepare Now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::onPrepareNowClick}"
            android:layout_alignParentBottom="true"
            style="@style/ButtonStyle.grey"/>


    </RelativeLayout>
</layout>